fix: Set z-index of SidebarLayer header.

--- a/packages/artalk/src/style/sidebar-layer.less
+++ b/packages/artalk/src/style/sidebar-layer.less
@@ -32,6 +32,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    z-index: 99999;
 
     .atk-sidebar-close {
       display: flex;
